--- a/add_Demo_info.ipynb
+++ b/add_Demo_info.ipynb
@@ -1238,6 +1238,78 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>field1</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Months</th>\n",
+       "      <th>Element</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>1961</th>\n",
+       "      <th>1962</th>\n",
+       "      <th>1963</th>\n",
+       "      <th>1964</th>\n",
+       "      <th>1965</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>avg_temp</th>\n",
+       "      <th>AnnualCO2emissions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 66 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [field1, Area, Months, Element, Unit, 1961, 1962, 1963, 1964, 1965, 1966, 1967, 1968, 1969, 1970, 1971, 1972, 1973, 1974, 1975, 1976, 1977, 1978, 1979, 1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, avg_temp, AnnualCO2emissions]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 66 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_co2_country.loc[merged_co2_country[\"Area\"] == 'Area Netherlands']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>field1</th>\n",
        "      <th>Months</th>\n",
        "      <th>Element</th>\n",
        "      <th>Unit</th>\n",
@@ -1642,7 +1714,7 @@
        "[201 rows x 65 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1743,7 @@
        "      dtype='object', name='Area', length=201)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2653,71 +2725,23 @@
        "  'Lat': '28.394857',\n",
        "  'Lng': '84.124008'},\n",
        " {'Country': 'Netherlands',\n",
-       "  'Avg Temp Change': Area\n",
-       "  Netherlands    87.324\n",
-       "  Netherlands    87.596\n",
-       "  Name: avg_temp, dtype: float64,\n",
-       "  'Avg Co2 Change': Area\n",
-       "  Netherlands    154.751\n",
-       "  Netherlands    154.751\n",
-       "  Name: AnnualCO2emissions, dtype: float64,\n",
-       "  'Population': Area\n",
-       "  Netherlands    17,134,872\n",
-       "  Netherlands    17,134,872\n",
-       "  Name: Population, dtype: object,\n",
-       "  'Density': Area\n",
-       "  Netherlands    508\n",
-       "  Netherlands    508\n",
-       "  Name: Density, dtype: object,\n",
-       "  'Land Size': Area\n",
-       "  Netherlands    33,720\n",
-       "  Netherlands    33,720\n",
-       "  Name: Land Size, dtype: object,\n",
-       "  'Images': Area\n",
-       "  Netherlands    https://www.worldometers.info/img/flags/nl-fla...\n",
-       "  Netherlands    https://www.worldometers.info/img/flags/nl-fla...\n",
-       "  Name: Images, dtype: object,\n",
-       "  'Lat': Area\n",
-       "  Netherlands    52.132633\n",
-       "  Netherlands    52.132633\n",
-       "  Name: Lat, dtype: object,\n",
-       "  'Lng': Area\n",
-       "  Netherlands    5.291266\n",
-       "  Netherlands    5.291266\n",
-       "  Name: Lng, dtype: object},\n",
-       " {'Country': 'Netherlands',\n",
-       "  'Avg Temp Change': Area\n",
-       "  Netherlands    87.324\n",
-       "  Netherlands    87.596\n",
-       "  Name: avg_temp, dtype: float64,\n",
-       "  'Avg Co2 Change': Area\n",
-       "  Netherlands    154.751\n",
-       "  Netherlands    154.751\n",
-       "  Name: AnnualCO2emissions, dtype: float64,\n",
-       "  'Population': Area\n",
-       "  Netherlands    17,134,872\n",
-       "  Netherlands    17,134,872\n",
-       "  Name: Population, dtype: object,\n",
-       "  'Density': Area\n",
-       "  Netherlands    508\n",
-       "  Netherlands    508\n",
-       "  Name: Density, dtype: object,\n",
-       "  'Land Size': Area\n",
-       "  Netherlands    33,720\n",
-       "  Netherlands    33,720\n",
-       "  Name: Land Size, dtype: object,\n",
-       "  'Images': Area\n",
-       "  Netherlands    https://www.worldometers.info/img/flags/nl-fla...\n",
-       "  Netherlands    https://www.worldometers.info/img/flags/nl-fla...\n",
-       "  Name: Images, dtype: object,\n",
-       "  'Lat': Area\n",
-       "  Netherlands    52.132633\n",
-       "  Netherlands    52.132633\n",
-       "  Name: Lat, dtype: object,\n",
-       "  'Lng': Area\n",
-       "  Netherlands    5.291266\n",
-       "  Netherlands    5.291266\n",
-       "  Name: Lng, dtype: object},\n",
+       "  'Avg Temp Change': 87.324,\n",
+       "  'Avg Co2 Change': 154.751,\n",
+       "  'Population': '17,134,872',\n",
+       "  'Density': '508',\n",
+       "  'Land Size': '33,720',\n",
+       "  'Images': 'https://www.worldometers.info/img/flags/nl-flag.gif',\n",
+       "  'Lat': '52.132633',\n",
+       "  'Lng': '5.291266'},\n",
+       " {'Country': 'Curaçao',\n",
+       "  'Avg Temp Change': 87.596,\n",
+       "  'Avg Co2 Change': 0.0,\n",
+       "  'Population': '164,093',\n",
+       "  'Density': '370',\n",
+       "  'Land Size': '444',\n",
+       "  'Images': 0,\n",
+       "  'Lat': 0,\n",
+       "  'Lng': 0},\n",
        " {'Country': 'New Caledonia',\n",
        "  'Avg Temp Change': 88.111,\n",
        "  'Avg Co2 Change': 2.432,\n",
@@ -3548,7 +3572,7 @@
        "  'Lng': 0}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
