line chart season

--- a/avg_temp_by_months-challenge.ipynb
+++ b/avg_temp_by_months-challenge.ipynb
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
        "[12 rows x 59 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2827,7 @@
     "\n",
     "for year in years:\n",
     "    mon_obj = {\n",
-    "              \"Year\":year\n",
+    "              \"year\":year\n",
     "              }\n",
     "    for month in months:\n",
     "        mon_obj[month] = months_country_mean.loc[month , year]        \n",
